--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modern Chatbot UI</title>
+
+    <meta name="description" content="SVUIT Finance Agent is an AI-powered assistant that helps you manage money smarter with real-time insights, budgeting, and financial decision support." />
+    <meta name="keywords" content="SVUIT, AI finance, finance agent, budgeting app, money management, financial insights, personal finance, expense tracking" />
+
+    
+    <title>SVUIT - Finance Agent</title>
   </head>
   <body>
     <div id="root"></div>
